Created search bar and settings buttons

--- a/style/myStyle.css
+++ b/style/myStyle.css
@@ -58,7 +58,6 @@ body {
 .logotext{
     color: white;
     font-size: 38px;
-    font-weight: bold;
     font-family: fantasy;
     vertical-align: top;
 }
@@ -67,6 +66,19 @@ body {
     font-size: 10px;
     font-family: sans-serif;
     color: #A8A8A8;
+}
+
+input[type=text] {
+    width: 230px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('searchicon.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
 }
 
 a:link {
@@ -103,6 +115,7 @@ select{
 }
 
 .footertext{
+    text-align: center;
     padding: 10px;
     margin: 10px;
     border: 2px solid lightgray;
