--- a/style/myStyle.css
+++ b/style/myStyle.css
@@ -1,89 +1,46 @@
 * {
     box-sizing: border-box;
 }
-body {
 
+body {
     background-image: url("../images/backimage.jpg");
     color: lightgray;
-    size: 18px;
-}
-
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-[class*="col-"] {
-    float: left;
-    padding: 15px;
-}
-
-/* For mobile phones: */
-[class*="col-"] {
-    width: 100%;
-}
-
-@media only screen and (min-width: 600px) {
-    /* For tablets: */
-    .col-m-1 {width: 8.33%;}
-    .col-m-2 {width: 16.66%;}
-    .col-m-3 {width: 25%;}
-    .col-m-4 {width: 33.33%;}
-    .col-m-5 {width: 41.66%;}
-    .col-m-6 {width: 50%;}
-    .col-m-7 {width: 58.33%;}
-    .col-m-8 {width: 66.66%;}
-    .col-m-9 {width: 75%;}
-    .col-m-10 {width: 83.33%;}
-    .col-m-11 {width: 91.66%;}
-    .col-m-12 {width: 100%;}
-}
-@media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
+    size: 12px;
 }
 
 .logotext{
     color: white;
-    font-size: 38px;
+    font-size: 24px;
     font-family: fantasy;
     vertical-align: top;
 }
 
-.title{
-    font-size: 10px;
-    font-family: sans-serif;
-    color: #A8A8A8;
+.container-fluid{
+    margin-top:12px;
 }
 
-input[type=text] {
+.searchbar{
     width: 230px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-    background-color: white;
     background-image: url('searchicon.png');
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
 }
 
+.recommendedvideos{
+    margin-top: 36px;
+    background-color: #DCD0C0;
+    border: 2px solid #C0B283;
+    color: black;
+}
+
 a:link {
     color: white;
-    font-size: 24px;
+    font-size: 12px;
 }
 a:visited {
     color: gray;
@@ -91,19 +48,9 @@ a:visited {
 a:hover {
     color: lightblue;
 }
+
 a:active {
     color: blue;
-}
-
-input {
-    padding: 10px;
-    margin: 10px;
-    background-color: lightgray;
-    color: black;
-    box-sizing: border-box;
-}
-input[type="number"]{
-    width: 60px;
 }
 
 select{
@@ -116,6 +63,7 @@ select{
 
 .footertext{
     text-align: center;
+    size: 12px;
     padding: 10px;
     margin: 10px;
     border: 2px solid lightgray;
