Fixed a lot of formatting

--- a/style/style.css
+++ b/style/style.css
@@ -31,11 +31,26 @@ body {
     padding: 12px 20px 12px 40px;
 }
 
-.recommendedvideos{
+.recommendedvideosbox{
     margin-top: 36px;
     background-color: #DCD0C0;
     border: 2px solid #C0B283;
     color: black;
+}
+
+.recommendedvideo{
+    font-size: 16px;
+    border:  2px solid white;
+    padding: 10px 10px 10px 10px;
+    color: black;
+    margin: 50px 10px 10px 10px;
+    width: 100%    !important;
+    height: auto   !important;
+}
+
+.arrow{
+    margin: auto;
+    display: block;
 }
 
 .video1 {
