Added non-subscribed home page

--- a/style/style.css
+++ b/style/style.css
@@ -94,6 +94,15 @@ button {
     width: 30%;
 }
 
+.centeredText {
+    background: rgba(0,0,0,0);
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .video_descrip {
     font-size: 20px;
 }
@@ -136,6 +145,7 @@ select{
 /* ---------- LIVE-CHAT ---------- */
 
 .livechatbox{
+    margin-left: 24px;
     margin-top: 24px;
     background-color: rgb(192, 220, 213);
     border: 2px solid rgb(131, 168, 192);
@@ -222,7 +232,9 @@ select{
 /* ----- PLAYLIST ----- */
 
 .playlistbox{
+    text-align: center;
     margin-top: 24px;
+    margin-left: 24px;
     background-color: rgb(220, 192, 203);
     border: 2px solid rgb(192, 131, 154);
     color: black;
@@ -264,349 +276,18 @@ div.tab button.active {
     border-top: none;
 }
 
-/*     background-color: gray;
-}
-
-.header {
-    border: 10px solid #1100FF;
-    color: white;
-    padding: 10px 10px 10px 10px;
-    font-size: 30px;
-    overflow: auto;
-}
-
-.header_img {
-    float: left;
-    margin: 0px 0px 0px 0px;
-}
-
-.username {
-    float: right;
-    font-size: 40px;
-}
-
-.headshot {
-    float: right;
-    margin: 0px 20px 0px 20px;
-}
-
-.video1 {
-    border: 3px solid white;
-    padding: 10px 10px 200px 40px;
-    color: black;
-    margin: 50px 30px 10px 50px;
-}
-
-button {
+.darkClass
+{
     background-color: white;
-}
-
-#close-image img {
-    display: block;
-    height: 30px;  
-    width: 30px;
-}
-
-video {      
-    float:right;
-    margin: 30px 20px 50px 30px;
-}
-
-.video2 {
-    border: 3px solid white;
-    padding: 30px 10px 150px 40px;
-    color: black;
-    margin: 50px 30px 10px 50px;
-    overflow: auto;
-}
-
-.gallery {
-    margin: -20px 20px 150px 50px;
-    float: left;
-    width: 350px;
-}
-
-.gallery video {
+    filter:alpha(opacity=50); /* IE */
+    opacity: 0.5; /* Safari, Opera */
+    -moz-opacity:0.50; /* FireFox */
+    z-index: 20;
+    height: 100%;
     width: 100%;
-    height: 220px;
+    background-repeat:no-repeat;
+    background-position:center;
+  /*  position:absolute;
+    top: 0px;
+    left: 0px;*/
 }
-
-.title {
-    font-size: 19px;
-    text-align: left;
-}
-
-.modal {
-    display: initial;
-    position: fixed; Stay in place
-    /* z-index: 1; Sit on top
-    left: 0;
-    top: 0;
-    width: 100%; Full width
-    height: 100%; Full height
-    overflow: auto; Enable scroll if needed
-    background-color: rgb(0,0,0); Fallback color
-    background-color: rgba(143, 143, 143, 0.4); Black w/ opacity
-}
-
-Modal Content/Box
-.modal-content {
-    background-color: black;
-    color: white;
-    font-size: 20px;
-    margin: 15% auto; 15% from the top and centered
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size
-}
-
-.dropbtn {
-    background-color: black;
-    color: white;
-    padding: 5px;
-    font-size: 20px;
-    border: none;
-    cursor: pointer;
-    border-radius: 50%;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-    background-color: green;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    padding: 5px;
-    position: absolute;
-    background-color: white;
-    min-width: 250px;
-    overflow: auto;
-    right: 0;
-    z-index: 1;
-}
-
-.show {
-    display: block;
-}
-
-a:link {
-    color: white;
-    background-color: transparent;
-    text-decoration: none;
-}
-a:visited {
-    color:white;
-    background-color: transparent;
-    text-decoration: none;
-}
-a:hover {
-    color: yellow;
-    background-color: transparent;
-    text-decoration: underline;
-}
-
-#div1 {
-    float: right;
-    width: 550px;
-    height: 330px;
-}
-
-#div2 {
-    float: right;
-    width: 400px;
-    height: 300px;
-    border:1px solid #aaaaaa;
-}
-
-#div3 {
-    float: right;
-    width: 400px;
-    height: 300px;
-    border:1px solid #aaaaaa;
-}
-
-#div4 {
-    float: right;
-    width: 400px;
-    height: 300px;
-    border:1px solid #aaaaaa;
-}
-*/
-/*     background-color: gray;
-}
-
-.header {
-    border: 10px solid #1100FF;
-    color: white;
-    padding: 10px 10px 10px 10px;
-    font-size: 30px;
-    overflow: auto;
-}
-
-.header_img {
-    float: left;
-    margin: 0px 0px 0px 0px;
-}
-
-.username {
-    float: right;
-    font-size: 40px;
-}
-
-.headshot {
-    float: right;
-    margin: 0px 20px 0px 20px;
-}
-
-.video1 {
-    border: 3px solid white;
-    padding: 10px 10px 200px 40px;
-    color: black;
-    margin: 50px 30px 10px 50px;
-}
-
-button {
-    background-color: white;
-}
-
-#close-image img {
-    display: block;
-    height: 30px;  
-    width: 30px;
-}
-
-video {      
-    float:right;
-    margin: 30px 20px 50px 30px;
-}
-
-.video2 {
-    border: 3px solid white;
-    padding: 30px 10px 150px 40px;
-    color: black;
-    margin: 50px 30px 10px 50px;
-    overflow: auto;
-}
-
-.gallery {
-    margin: -20px 20px 150px 50px;
-    float: left;
-    width: 350px;
-}
-
-.gallery video {
-    width: 100%;
-    height: 220px;
-}
-
-.title {
-    font-size: 19px;
-    text-align: left;
-}
-
-.modal {
-    display: initial;
-    position: fixed; Stay in place
-    /* z-index: 1; Sit on top
-    left: 0;
-    top: 0;
-    width: 100%; Full width
-    height: 100%; Full height
-    overflow: auto; Enable scroll if needed
-    background-color: rgb(0,0,0); Fallback color
-    background-color: rgba(143, 143, 143, 0.4); Black w/ opacity
-}
-
-Modal Content/Box
-.modal-content {
-    background-color: black;
-    color: white;
-    font-size: 20px;
-    margin: 15% auto; 15% from the top and centered
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size
-}
-
-.dropbtn {
-    background-color: black;
-    color: white;
-    padding: 5px;
-    font-size: 20px;
-    border: none;
-    cursor: pointer;
-    border-radius: 50%;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-    background-color: green;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    padding: 5px;
-    position: absolute;
-    background-color: white;
-    min-width: 250px;
-    overflow: auto;
-    right: 0;
-    z-index: 1;
-}
-
-.show {
-    display: block;
-}
-
-a:link {
-    color: white;
-    background-color: transparent;
-    text-decoration: none;
-}
-a:visited {
-    color:white;
-    background-color: transparent;
-    text-decoration: none;
-}
-a:hover {
-    color: yellow;
-    background-color: transparent;
-    text-decoration: underline;
-}
-
-#div1 {
-    float: right;
-    width: 550px;
-    height: 330px;
-}
-
-#div2 {
-    float: right;
-    width: 400px;
-    height: 300px;
-    border:1px solid #aaaaaa;
-}
-
-#div3 {
-    float: right;
-    width: 400px;
-    height: 300px;
-    border:1px solid #aaaaaa;
-}
-
-#div4 {
-    float: right;
-    width: 400px;
-    height: 300px;
-    border:1px solid #aaaaaa;
-}
-*/
