Fixed the toolbar and file names

--- a/style/loginStyle.css
+++ b/style/loginStyle.css
@@ -31,6 +31,12 @@ body {
     margin-top: 16px;
 }
 
+.toolbarbox{
+    margin-top: 12px;
+    background-color: rgb(194, 220, 192);
+    border: 2px solid rgb(136, 192, 131);
+}
+
 .recommendedvideosbox{
     background-color: #DCD0C0;
     border: 2px solid #C0B283;
