--- a/style/videoStyle.css
+++ b/style/videoStyle.css
@@ -31,10 +31,10 @@ body {
     border: 2px solid rgb(136, 192, 131);
 }
 
-.recommendedvideosbox{
+.currentvideobox{
     margin-top: 36px;
-    background-color: white;
-    border: 2px solid blues;
+    background-color: #DCD0C0;
+    border: 2px solid #C0B283;
     color: black;
 }
 
