--- a/style/loginStyle.css
+++ b/style/loginStyle.css
@@ -16,9 +16,10 @@ body {
 
 .logotext{
     color: white;
-    font-size: 24px;
+    font-size: 26px;
+    margin-top: 18px;
     font-family: fantasy;
-    vertical-align: top;
+    float: right;
 }
 
 .search{
@@ -33,9 +34,7 @@ body {
 }
 
 .toolbarbox{
-    margin-top: 12px;
-    background-color: rgb(194, 220, 192);
-    border: 2px solid rgb(136, 192, 131);
+    margin-top: 6px;
 }
 
 .recommendedvideosbox{
