--- a/style/videoStyle.css
+++ b/style/videoStyle.css
@@ -12,9 +12,10 @@ body {
 
 .logotext{
     color: white;
-    font-size: 30px;
+    font-size: 26px;
+    margin-top: 18px;
     font-family: fantasy;
-    vertical-align: top;
+    float: right;
 }
 
 .search{
@@ -29,9 +30,7 @@ body {
 }
 
 .toolbarbox{
-    margin-top: 12px;
-    background-color: rgb(194, 220, 192);
-    border: 2px solid rgb(136, 192, 131);
+    margin-top: 6px;
 }
 
 .currentvideobox{
