--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -232,7 +232,7 @@ select{
     text-align: center;
     margin-top: 24px;
     margin-left: 24px;
-    background: #66A5AD
+    background: #66A5AD;
     color: white;
 }
 
